--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
-@mixin ease-in {
-    transition: 1.0s, ease-in;
+@mixin easeIn {
+    transition: 0.5s;
+    transition-timing-function: ease-out;
 }
 
 $background-color: #fff;
@@ -20,6 +21,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    top: 0;
     height: 8vh;
     width: 100vw;
     border-bottom: 2px solid black;
@@ -53,29 +55,54 @@ body {
     
     :hover {
         border-bottom: 2px solid $nav-color;
-        @include ease-in;
+        @include easeIn;
+    }
+}
+
+.nav-burger {
+    display: none;
+
+    div {
+        width: 1.5rem;
+        height: 2px;
+        background-color: $background-color;
+        margin: 4px;
     }
 
+    :hover {
+        background-color: $nav-color;
+        @include easeIn;
+    }
 }
 
 .section {
-    height: 100vh;
     text-align: right;
-    border-top: 1px solid black;
 
-    #home {
-        height: 92vh;
+    &#home {
+        height: 50vh;
+        padding-top: 25%;
+        border: 2px solid black;
     }
 
     #about {
+        height: 100vh;
         display: flex;
         justify-content: center;
+    }
+
+    #project {
+        height: 80vh;
+        display: flex;
+        flex-wrap: wrap;
+        overflow-y: scroll;
+        padding-bottom: 5vh;
+        margin-bottom: 5vh;
     }
 }
 
 .home-name-tag {
     margin-right: 10vw;
-    margin-top: 45vh;
+    // margin-top: 30vh;
     line-height: 0;
     height: 30vh;
     border-right: 5px solid black;
@@ -102,19 +129,9 @@ body {
 
         :hover {
             color: $home-color;
+            @include easeIn;
             cursor: pointer;
         }
-    }
-}
-
-.nav-burger {
-    display: none;
-
-    div {
-        width: 1.5rem;
-        height: 2px;
-        background-color: $background-color;
-        margin: 4px;
     }
 }
 
@@ -142,22 +159,38 @@ body {
     }
 
     img {
-        margin: auto;
-        border: 4px solid $about-color;
+        margin: 0;
+        height: 45vh;
+        width: auto;
+        border: 3px solid black;
         border-radius: 50%;
+
+        &:hover {
+            border-color: $home-color;
+            @include easeIn;
+        }
     }
 
     p {
         line-height: 35px;
         font-size: 1.5rem;
+        font-family: Avenir, sans-serif;
+
     }
 }
 
 .project-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding-top: 10vh;
+    // display: flex;
+    // flex-wrap: wrap;
+    // align-items: center;
+    // justify-content: space-around;
+    // padding-top: 10vh;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+    padding: 10vh 1vw;
+    
 
     .project {
         height: 85vh;
@@ -172,9 +205,11 @@ body {
     .project1 {
         .img-box {
             height: 35vh;
+            width: 100%;
             border: 2px solid black;
             background: url(https://i.imgur.com/nBNRUTa.png);
-            background-size: contain;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
@@ -183,7 +218,8 @@ body {
             height: 35vh;
             border: 2px solid black;
             background: url(https://i.imgur.com/t1VCXO8.png);
-            background-size: contain;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
@@ -192,16 +228,19 @@ body {
             height: 35vh;
             border: 2px solid black;
             background: url(https://i.imgur.com/Wgz5LOf.png?1);
-            background-size: contain;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
     .project4 {
         .img-box {
             height: 35vh;
+            width: auto;
             border: 2px solid black;
             background: url(https://i.imgur.com/Jg6oj1i.png);
-            background-size: contain;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
@@ -212,6 +251,7 @@ body {
 
     p {
         margin-bottom: 1.5rem;
+        font-family: Avenir, sans-serif;
     }
 
     .button-box {
@@ -231,16 +271,34 @@ body {
         }
 
         :hover {
-            border: 2px solid $project-color;
+            border: 2px solid $nav-color;
+            @include easeIn;
             cursor: pointer;
         }
     }
 }
 
+// Footer
+footer {
+    position: fixed;
+    margin-top: 5vh;
+    height: 5vh;
+    width: 100vw;
+    text-align: center;
+    color: $background-color;
+    background-color: $primary-color;
+    bottom: 0;
+}
 
 
-// Large Tablet
+
+// Small Laptop
 @media screen and (max-width: 991px) {
+
+    .section#home {
+        padding-top: 55vh;
+    }
+
     .nav-links {
         width: 40%;
     }
@@ -267,12 +325,25 @@ body {
     
 }
 
-//Medium Tablet
+// Tablet
 @media screen and (max-width: 768px) {
     body {
         overflow-x: hidden;
     }
 
+    .section {
+
+        &#home {
+            padding-top: 55vh;
+        }
+
+        &#about {
+            padding-top: 8vh;
+        }
+        
+    }
+
+    // Nav Menu
     .nav-links {
         position: absolute;
         left: 0px;
@@ -304,6 +375,7 @@ body {
         cursor: pointer;
     }
 
+    // Home Page 
     .home-name-tag {
         height: 18vh;
 
@@ -321,9 +393,50 @@ body {
     .nav-active {
         transform: translateX(0%)
     }
+
+    // About Page
+    .about-container {
+        display: block;
+
+        .photo-box {
+            height: 50vh;
+            width: 100vw;
+            padding: 0;
+            margin: 8vh 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        .bio-box {
+            height: 30vh;
+            width: 100vw;
+            padding: 0;
+        }
+    }
+
+    //Projects Page
+    .project-box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10vh 5vw;
+        margin: 0;
+        width: 90%;
+
+        .project {
+            width: 100%;
+        }
+
+        .button-box {
+            width: 100%;
+
+            button {
+                width: 20vw;
+            }
+        }
+    }
 }
 
-//Smart Phone
+//Medium Tablet
 @media screen and (max-width: 515px) {
     .nav-links {
         width: 50%;
@@ -345,5 +458,63 @@ body {
         }
     }
 
+    .project {
+        margin-bottom: 5vh;
+    }
+}
 
+@media screen and (max-width: 360px) {
+    .nav-links {
+        width: 50%;
+    }
+
+    .home-name-tag {
+        height: 17vh;
+        margin-right: 4vw;
+
+        h1 {
+            font-size: 20px;
+        }
+        span {
+            font-size: 30px;
+            letter-spacing: 1px;
+        }
+        h3 {
+            font-size: 13px;
+        }
+    }
+
+    
+    .about-container {
+        padding-top: 5vh;
+
+        .photo-box {
+            height: 40vh;
+            width: 80vw;
+            margin: 0 auto;
+
+            img {
+                height: 40vh;
+            }
+            
+            .photo {
+                width: 80vw;
+                border-radius: 50%;
+            }
+        }
+
+        .bio-box {
+            height: 60vh;
+            
+            p {
+                font-size: 16px;
+            }
+        }
+    
+        .project {
+            margin-bottom: 5vh;
+            height: 100%;
+        }
+    }
+    
 }
