--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,9 +133,13 @@ main {
         font-size: 3rem;
 
         :hover {
-            color: $home-color;
+            color: #F37335;
             @include easeIn;
             cursor: pointer;
+        }
+
+        i {
+            color: $home-color;
         }
     }
 }
@@ -285,13 +289,13 @@ main {
             }
 
             &:hover {
-                border: 2px solid $nav-color;
+                border: 2px solid #F37335;
                 transition: 0.5s;
                 transition-timing-function: ease-out;
                 cursor: pointer;
 
                 a {
-                    border-bottom: 1px solid $nav-color;
+                    border-bottom: 1px solid #F37335;
                     transition: 0.5s;
                     transition-timing-function: ease-out;
                 }
@@ -390,13 +394,25 @@ footer {
         }
 
         li {
-            opacity: 0.5;
+            opacity: 1;
         }
     }
 
     .nav-burger {
         display: block;
         cursor: pointer;
+    }
+
+    @keyframes navLinkFade {
+        from {
+            opacity: 0;
+            transform: translateX(-100%)
+        }
+        
+        to {
+            opacity: 1;
+            transform: translateX(0%)
+        }
     }
 
     // Home Page 
@@ -431,7 +447,7 @@ footer {
             justify-content: center;
 
             img {
-                width: auto;
+                width: 45vw;
             }
         }
 
@@ -491,7 +507,7 @@ footer {
             margin: 0 auto;
 
             img {
-                width: 65vw;
+                width: 75vw;
             }
         }
 
@@ -502,6 +518,22 @@ footer {
 
     .project {
         margin-bottom: 5vh;
+    }
+
+    .project-box {
+        grid-template-columns: repeat(1, 1fr);
+
+        .button-box {
+            button {
+                width: 30vw;
+            }
+        }
+    }
+
+    .button-box {
+        button {
+            width: 30vw;
+        }
     }
 }
 
@@ -532,15 +564,16 @@ footer {
 
         .photo-box {
             height: 40vh;
-            width: 80vw;
+            width: 100vw;
             margin: 0 auto;
 
             img {
-                height: 40vh;
+                height: 30vh;
+                width: 85vw;
             }
             
             .photo {
-                width: 80vw;
+                width: 85vw;
                 border-radius: 50%;
             }
         }
@@ -558,5 +591,14 @@ footer {
             height: 100%;
         }
     }
-    
+
+    .project-box {
+        grid-template-columns: repeat(1, 1fr);
+
+        .button-box {
+            button {
+                width: 30vw;
+            }
+        }
+    }
 }
