--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,7 +133,7 @@ main {
         font-size: 3rem;
 
         :hover {
-            color: #F37335;
+            color: $nav-color;
             @include easeIn;
             cursor: pointer;
         }
@@ -178,6 +178,7 @@ main {
         width: 25vw;
         border: 3px solid black;
         border-radius: 50%;
+        transition: all 0.9s ease-out;
 
         &:hover {
             border-color: $home-color;
@@ -289,13 +290,13 @@ main {
             }
 
             &:hover {
-                border: 2px solid #F37335;
+                border: 2px solid $nav-color;
                 transition: 0.5s;
                 transition-timing-function: ease-out;
                 cursor: pointer;
 
                 a {
-                    border-bottom: 1px solid #F37335;
+                    border-bottom: 1px solid $nav-color;
                     transition: 0.5s;
                     transition-timing-function: ease-out;
                 }
